@@ -657,7 +657,7 @@ Inside the bucardo database, the <b>bucardo_config</b> table holds many settings
 <tr>
 <td class="lcol" >log_showpid</td> <td>0</td> <td>Show PID in the log output?</td> </tr>
 <tr>
-<td class="lcol" >log_showtime</td> <td>1</td> <td>Show timestamp in the log output?</td> </tr>
+<td class="lcol" >log_showtime</td> <td>1</td> <td>Show timestamp in the log output? 0=off  1=seconds since epoch  2=scalar gmtime  3=scalar localtime</td> </tr>
 <tr>
 <td class="lcol" >log_showline</td> <td>0</td> <td>Show line number in the log output?</td> </tr>
 <tr>
